[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-sentinel-env"
version = "1.0.0"
description = "A realistic SOC incident-response environment where agents inspect enterprise artifacts and submit verifiable containment reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "requests",
    "matplotlib",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
